fixed the truncating issue yay

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -233,6 +233,7 @@ option {
     p {
       margin-left: $spacer1;
       overflow: hidden;
+      white-space: nowrap;
     }
   }
 
